[gd_scene load_steps=18 format=2]

[ext_resource path="res://GUI/SmartBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Sprites/UI/Item_005.png" type="Texture" id=2]
[ext_resource path="res://Assets/GUI/Crosshair.png" type="Texture" id=3]
[ext_resource path="res://GUI/HUD.gd" type="Script" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://Assets/Themes/MainTheme.tres" type="Theme" id=6]
[ext_resource path="res://Assets/Fonts/Atarian/SF Atarian System Extended Bold Italic.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/Sprites/Interactions/Item_281.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/UI/Item_190.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/UI/Item_156.png" type="Texture" id=11]

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.854902, 0.215686, 0.294118, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 0.313726 )
shadow_color = Color( 0, 0, 0, 0.235294 )
shadow_size = 2
shadow_offset = Vector2( 1.5, 1.5 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.164706, 0.109804, 0.501961, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0
shadow_color = Color( 0, 0, 0, 0.235294 )
shadow_size = 2
shadow_offset = Vector2( 1.5, 1.5 )

[sub_resource type="DynamicFont" id=13]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.87, 0.87, 0.87, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.784314, 0.784314, 0.784314, 0.847059 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HUDControl/InteractionPanel/InteractionKey:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "interaction_beat"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("HUDControl/InteractionPanel/InteractionKey:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}

[node name="HUD" type="CanvasLayer"]

[node name="HUDControl" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 4 )

[node name="Crossshair" type="TextureRect" parent="HUDControl"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 4

[node name="StatsControl" type="Control" parent="HUDControl"]

[node name="HPBar" parent="HUDControl/StatsControl" instance=ExtResource( 1 )]
margin_left = 20.0
margin_top = 20.0
margin_right = 320.0
margin_bottom = 50.0
custom_styles/fg = SubResource( 10 )
custom_styles/bg = SubResource( 11 )
value = 50.0
previous_max_value = 300

[node name="AttackIcon" type="TextureRect" parent="HUDControl/StatsControl"]
margin_left = 20.0
margin_top = 70.0
margin_right = 40.0
margin_bottom = 90.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="AttackLabel" type="Label" parent="HUDControl/StatsControl"]
margin_left = 48.0
margin_top = 70.0
margin_right = 168.0
margin_bottom = 90.0
text = "0"
valign = 1
max_lines_visible = 1

[node name="DefenseIcon" type="TextureRect" parent="HUDControl/StatsControl"]
margin_left = 20.0
margin_top = 102.0
margin_right = 40.0
margin_bottom = 122.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="DefenseLabel" type="Label" parent="HUDControl/StatsControl"]
margin_left = 48.0
margin_top = 102.0
margin_right = 168.0
margin_bottom = 122.0
text = "0"
valign = 1
max_lines_visible = 1

[node name="SpeedIcon" type="TextureRect" parent="HUDControl/StatsControl"]
margin_left = 20.0
margin_top = 134.0
margin_right = 40.0
margin_bottom = 154.0
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="SpeedLabel" type="Label" parent="HUDControl/StatsControl"]
margin_left = 48.0
margin_top = 134.0
margin_right = 168.0
margin_bottom = 154.0
text = "0"
valign = 1
max_lines_visible = 1

[node name="MoneyIcon" type="TextureRect" parent="HUDControl/StatsControl"]
margin_left = 20.0
margin_top = 170.0
margin_right = 44.0
margin_bottom = 194.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="MoneyLabel" type="Label" parent="HUDControl/StatsControl"]
margin_left = 52.0
margin_top = 170.0
margin_right = 172.0
margin_bottom = 194.0
text = "0"
valign = 1
max_lines_visible = 1

[node name="MapPanel" type="Control" parent="HUDControl"]
margin_left = 876.0
margin_top = 30.0
margin_right = 997.0
margin_bottom = 142.0

[node name="ConsumablesControl" type="Control" parent="HUDControl"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ConsumableIcon5" type="TextureRect" parent="HUDControl/ConsumablesControl"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -68.0
margin_top = -146.0
margin_right = -44.0
margin_bottom = -122.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="ConsumableIcon4" type="TextureRect" parent="HUDControl/ConsumablesControl"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -48.0
margin_top = -126.0
margin_right = -24.0
margin_bottom = -102.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="ConsumableIcon3" type="TextureRect" parent="HUDControl/ConsumablesControl"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -68.0
margin_top = -106.0
margin_right = -44.0
margin_bottom = -82.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="ConsumableIcon2" type="TextureRect" parent="HUDControl/ConsumablesControl"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -48.0
margin_top = -86.0
margin_right = -24.0
margin_bottom = -62.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="ConsumableIcon" type="TextureRect" parent="HUDControl/ConsumablesControl"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -74.0
margin_right = -36.0
margin_bottom = -20.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="InteractionPanel" type="Panel" parent="HUDControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 100.0
margin_top = -14.0
margin_right = 340.0
margin_bottom = 14.0
custom_styles/panel = SubResource( 3 )

[node name="InteractionIcon" type="TextureRect" parent="HUDControl/InteractionPanel"]
anchor_right = 0.25
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="InteractionMessage" type="Label" parent="HUDControl/InteractionPanel"]
anchor_left = 0.25
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 13 )
text = "Interaction"
valign = 1
max_lines_visible = 1

[node name="InteractionKey" type="Panel" parent="HUDControl/InteractionPanel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 10.0
margin_top = -14.0
margin_right = 38.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 14, 14 )
custom_styles/panel = SubResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="InteractionKeyLabel" type="Label" parent="HUDControl/InteractionPanel/InteractionKey"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "F"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUDControl"]
root_node = NodePath("../..")
anims/RESET = SubResource( 4 )
anims/interaction_beat = SubResource( 5 )
